--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" href="VAJ.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VAJasok</title>
+    <title>V.A.J</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -39,8 +40,24 @@
     </style>
 </head>
 <body>
+    <script>
+        window.onload = function () {
+            const titles = ["V","V.","V.A","V.A.","V.A.J","V.A.","V.A","V.","V"];
+            let currentIndex = 0;
+
+            function changeTitle() {
+                document.title = titles[currentIndex];
+                currentIndex = (currentIndex + 1) % titles.length;
+            }
+
+            setInterval(changeTitle, 500); // 1 mp-ként vált
+        };
+    </script>
+
+
+
     <header>
-        <h1>Vajasok</h1>
+        <h1>V.A.J tagok</h1>
     </header>
     <div class="container text-center">
         <div class="row">
