--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" href="VAJ.png">
+    <link rel="icon" href="vaj.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>V.A.J</title>
@@ -27,7 +27,7 @@
             font-size: 25px;
             text-align: center;
             color: white;
-            font-family: monospace;
+            font-family:'Satoshi', sans-serif !important;
             margin-top: 20px;
         }
         a {
@@ -57,24 +57,24 @@
 
 
     <header>
-        <h1>V.A.J tagok</h1>
+        <h1><img src="vaj2.png" alt=""></h1>
     </header>
     <div class="container text-center">
         <div class="row">
             <div class="col">
-                <h2>plsdontrage</h2>
+                <h2>PLSDONTRAGE</h2>
                 <a href="https://plsdontrage.retard.hu" target="_blank"><img src="xd.png" alt=""></a>
                 <p>szereti a tejet</p>
             </div>
             <div class="col">
-                <h2>erikrobi</h2>
+                <h2>Erikrobi</h2>
                 <a href="https://guns.lol/erikrobi" target="_blank"><img src="xd1.png" alt=""></a>
                 <p>Erikrobi és Társai Bt. business ember</p>
             </div>
             <div class="col">
                 <h2>rewerze</h2>
                 <a href="https://www.rewerze.hu/social/" target="_blank"><img src="xd2.png" alt=""></a>
-                <p>szeretjük</p>
+                <p>youtuber, fővezér</p>
             </div>
         </div>
         <div class="row">
