--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="col">
                 <h2>rewerze</h2>
                 <a href="https://www.rewerze.hu/social/" target="_blank"><img src="xd2.png" alt=""></a>
-                <p>youtuber, fővezér</p>
+                <p>youtuber, tulajdonos</p>
             </div>
         </div>
         <div class="row">
