--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
         <div class="row">
             <div class="col">
                 <h2>PLSDONTRAGE</h2>
-                <a href="https://plsdontrage.retard.hu" target="_blank"><img src="xd.png" alt=""></a>
+                <a href="https://plsdontrage.erikrobi.hu" target="_blank"><img src="xd.png" alt=""></a>
                 <p>szereti a tejet</p>
             </div>
             <div class="col">
                 <h2>Erikrobi</h2>
-                <a href="https://guns.lol/erikrobi" target="_blank"><img src="xd1.png" alt=""></a>
+                <a href="https://erikrobi.hu" target="_blank"><img src="xd1.png" alt=""></a>
                 <p>Erikrobi és Társai Bt. business ember</p>
             </div>
             <div class="col">
