--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         }
         header {
             text-align: center;
+            margin: 20px 0;
         }
         h1 {
             font-size: 2cm;
@@ -37,6 +38,10 @@
         a:hover {
             color: lightgray;
         }
+        img {
+            max-width: 100%;
+            height: auto;
+        }
     </style>
 </head>
 <body>
@@ -50,42 +55,40 @@
                 currentIndex = (currentIndex + 1) % titles.length;
             }
 
-            setInterval(changeTitle, 500); // 1 mp-ként vált
+            setInterval(changeTitle, 500);
         };
     </script>
 
-
-
     <header>
-        <h1><img src="vaj4.png" alt=""></h1>
+        <h1><img src="vaj4.png" alt="VAJ Logo"></h1>
     </header>
     <div class="container text-center">
         <div class="row">
-            <div class="col">
+            <div class="col-md-4 col-12">
                 <h2>PLSDONTRAGE</h2>
-                <a href="https://plsdontrage.erikrobi.hu" target="_blank"><img src="xd.png" alt=""></a>
+                <a href="https://plsdontrage.erikrobi.hu" target="_blank"><img src="xd.png" alt="PLSDONTRAGE"></a>
                 <p>szereti a tejet</p>
             </div>
-            <div class="col">
+            <div class="col-md-4 col-12">
                 <h2>Erikrobi</h2>
-                <a href="https://erikrobi.hu" target="_blank"><img src="xd1.png" alt=""></a>
+                <a href="https://erikrobi.hu" target="_blank"><img src="xd1.png" alt="Erikrobi"></a>
                 <p>Erikrobi és Társai Bt. business ember</p>
             </div>
-            <div class="col">
+            <div class="col-md-4 col-12">
                 <h2>rewerze</h2>
-                <a href="https://www.rewerze.hu/social/" target="_blank"><img src="xd2.png" alt=""></a>
+                <a href="https://www.rewerze.hu/social/" target="_blank"><img src="xd2.png" alt="rewerze"></a>
                 <p>youtuber, tulajdonos</p>
             </div>
         </div>
         <div class="row">
-            <div class="col">
+            <div class="col-md-6 col-12">
                 <h2>Anonymlekvar</h2>
-                <a href="https://twitch.tv/anonymlekvar" target="_blank"><img src="xd4.png" alt=""></a>
+                <a href="https://twitch.tv/anonymlekvar" target="_blank"><img src="xd4.png" alt="Anonymlekvar"></a>
                 <p>streamol néha</p>
             </div>
-            <div class="col">
+            <div class="col-md-6 col-12">
                 <h2>irlniffty</h2>
-                <img src="rew.png" alt="">
+                <img src="rew.png" alt="irlniffty">
                 <p>/ᐠ - ˕ -マ Ⳋ</p>
             </div>
         </div>
